<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="aboutus">关于我们</string>
    <string name="action_failed">操作失败！</string>
    <string name="action_succeed">操作成功！</string>
    <string name="alipay">网上缴费</string>
    <string name="all_connections">断开指定连接</string>
    <string name="all_disconnected">已断开全部连接</string>
    <string name="amount_empty_error">请输入缴费金额！</string>
    <string name="amount_error">缴费金额错误！</string>
    <string name="app_fullname">北京大学网关</string>
    <string name="app_name">北大网关</string>
    <string name="balance">余额：</string>
    <string name="cancel_alert">取消</string>
    <string name="confirm_alert">确定</string>
    <string name="connected">已连接：</string>
    <string name="copyright">版权所有</string>
    <string name="copyright_content">北京大学计算中心</string>
    <string name="current_connection">当前连接：</string>
    <string name="developer">开发人员</string>
    <string name="developer_names">ccyangj@pku.edu.cn\nbdlxn@pku.edu.cn\npkuzyang@pku.edu.cn\nhanyuliu@pku.edu.cn</string>
    <string name="disconnect">断开连接</string>
    <string name="disconnectall">断开全部连接</string>
    <string name="disconnected">已断开连接</string>
    <string name="email">服务信箱</string>
    <string name="email_address">netinfo@pku.edu.cn</string>
    <string name="error">错误</string>
    <string name="error_disconnect">断开连接失败！</string>
    <string name="error_disconnectall">断开全部连接失败！</string>
    <string name="error_newpasswdLen">新密码长度有误！</string>
    <string name="error_no_newpasswd">请输入新密码！</string>
    <string name="error_no_second_newpasswd">请再次输入新密码！</string>
    <string name="error_no_username">请输入学号或职工号！</string>
    <string name="error_no_verificationcodes">请输入验证码！</string>
    <string name="error_noconnection">没有连接！</string>
    <string name="error_passwds_notmatch">两次输入密码不一致！</string>
    <string name="error_response_getmsg">服务器数据异常！</string>
    <string name="error_save_passwd">无法保存密码</string>
    <string name="error_serverresponse">错误的服务器响应参数！</string>
    <string name="error_username">学号/职工号错误！</string>
    <string name="error_username_passwd">学号/职工号或密码错误！</string>
    <string name="error_verificationcodes">验证码错误！</string>
    <string name="fa_minus_circle"></string>
    <string name="forget_passwd">忘记密码</string>
    <string name="free">免费地址</string>
    <string name="help_currentuser">当前账户：</string>
    <string name="help_deleteconnections">新建连接可能需几分钟后才能显示，左划可断开连接</string>
    <string name="hint_authencodes">请输入手机验证码</string>
    <string name="hint_fee">缴费金额（元），例：100</string>
    <string name="hint_newpasswd">请输入新密码</string>
    <string name="hint_newpasswd_confirm">再次输入新密码</string>
    <string name="hint_passwd">网关密码</string>
    <string name="hint_username">学号/职工号</string>
    <string name="ip">IP：</string>
    <string name="its">网络服务</string>
    <string name="kCFURLErrorOthers">网络连接失败!</string>
    <string name="language">English</string>
    <string name="login">连接</string>
    <string name="month_plan">包月</string>
    <string name="msg_alert">请输入账号和密码</string>
    <string name="no">否</string>
    <string name="no_month_plan">未包月</string>
    <string name="no_username_passwd">学号/职工号和密码不能为空！</string>
    <string name="notfree">收费地址</string>
    <string name="notice_alert">提示</string>
    <string name="notification">通知详情</string>
    <string name="ok">确定</string>
    <string name="pay">缴纳网费</string>
    <string name="pay_canceled">用户中途取消！</string>
    <string name="pay_error">缴费失败！</string>
    <string name="pay_failuer">支付失败！</string>
    <string name="pay_network_error">网络连接出错！</string>
    <string name="pay_other_exception">支付失败！</string>
    <string name="pay_processing">正在处理中</string>
    <string name="pay_success">支付成功！</string>
    <string name="phone">服务热线</string>
    <string name="phone_num">010-62751023</string>
    <string name="pkuits">北京大学网关</string>
    <string name="portal">校内门户</string>
    <string name="range">收费地址</string>
    <string name="rateus">给我们评价</string>
    <string name="reset_passwd">重置密码</string>
    <string name="select_disconnect">选择断开</string>
    <string name="send_authencodes">发送手机验证码</string>
    <string name="send_authencodes_wait">重发等待：</string>
    <string name="show_allconnections">显示全部连接！</string>
    <string name="store_passwd">记住密码</string>
    <string name="store_username">记住账号</string>
    <string name="submit_reset_passwd">重置密码</string>
    <string name="success">提示</string>
    <string name="tab_login">连接</string>
    <string name="tab_more">更多</string>
    <string name="tab_notifications">通知</string>
    <string name="time_left">剩余：</string>
    <string name="time_notcount">不计</string>
    <string name="today_connect_free">连接免费</string>
    <string name="today_connect_notfree">连接收费</string>
    <string name="today_connected">已连接</string>
    <string name="today_currentuser">当前帐户</string>
    <string name="today_disconnect">断开连接</string>
    <string name="today_disconnectall">断开全部</string>
    <string name="today_store_username_passwd">请先保存账户和密码</string>
    <string name="today_unlock">请先解锁手机</string>
    <string name="today_wait">请稍候...</string>
    <string name="update_alert">发现新版本</string>
    <string name="update_msg">新版本已经发布，请立即下载安装！</string>
    <string name="update_nexttime">下次再说</string>
    <string name="update_now">现在下载</string>
    <string name="usage">使用说明</string>
    <string name="version">版本</string>
    <string name="version_content">北京大学网关 1.0</string>
    <string name="view_more">查看更多</string>
    <string name="welcome">欢迎使用北大校园网！</string>
    <string name="yes">是</string>
    <string name="accept">Accept</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
</resources>
