<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:id="@id/main_content" app:fitsSystemWindows="true" app:layout_width="match_parent" app:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout app:theme="@style/AppTheme.AppBarOverlay" app:id="@id/appbar" app:layout_width="match_parent" app:layout_height="wrap_content" />
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <ScrollView android:id="@id/linearlayout_aboutus" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margintop_about_image" android:layout_marginBottom="@dimen/marginbottom_about_image" android:src="@drawable/about_android_v1" />
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:layout_weight="1.0">
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/phone" android:layout_weight="1.0" style="@*style/TextAppearance.Small" />
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/helpline" android:background="@color/white" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/phone_num" android:layout_weight="2.0" style="@*style/TextAppearance.Small" />
                </LinearLayout>
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:layout_weight="1.0">
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/email" android:layout_weight="1.0" style="@*style/TextAppearance.Small" />
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/helpmail" android:background="@color/white" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/email_address" android:layout_weight="2.0" style="@*style/TextAppearance.Small" />
                </LinearLayout>
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:layout_weight="1.0">
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/version" android:layout_weight="1.0" style="@*style/TextAppearance.Small" />
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/appversion" android:background="@color/white" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x3201" android:text="@string/version_content" android:layout_weight="2.0" style="@*style/TextAppearance.Small" />
                </LinearLayout>
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:layout_weight="1.0">
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/copyright" android:layout_weight="1.0" style="@*style/TextAppearance.Small" />
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/white" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/copyright_content" android:layout_weight="2.0" style="@*style/TextAppearance.Small" />
                </LinearLayout>
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/developer" android:layout_weight="1.0" style="@*style/TextAppearance.Small" />
                    <TextView android:textColor="@color/colorIPGWGray" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/developer_info" android:background="@color/white" android:paddingTop="5dp" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/developer_names" android:layout_weight="2.0" android:lineSpacingExtra="5dp" style="@*style/TextAppearance.Small" />
                </LinearLayout>
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
