<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="60dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f0a0052">
                <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/store_username" style="@style/option_item_text_parent" />
                <android.support.v7.widget.SwitchCompat android:id="@id/switch_store_username" android:layout_width="wrap_content" android:layout_height="match_parent" android:checked="false" android:textOn="ON" android:textOff="OFF" android:layout_alignParentRight="true" style="@style/Color1SwitchStyle" />
            </RelativeLayout>
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            <RelativeLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f0a0052">
                <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/store_passwd" style="@style/option_item_text_parent" />
                <android.support.v7.widget.SwitchCompat android:id="@id/switch_store_passwd" android:layout_width="wrap_content" android:layout_height="match_parent" android:checked="false" android:textOn="ON" android:textOff="OFF" android:layout_alignParentRight="true" style="@style/Color1SwitchStyle" />
            </RelativeLayout>
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" android:layout_marginTop="@dimen/cell_gap" />
            <RelativeLayout android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x7f0a0052">
                <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/language" style="@style/option_item_text_parent" />
                <android.support.v7.widget.SwitchCompat android:id="@id/switch_language" android:layout_width="wrap_content" android:layout_height="match_parent" android:checked="false" android:textOn="ON" android:textOff="OFF" android:layout_alignParentRight="true" style="@style/Color1SwitchStyle" />
            </RelativeLayout>
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            <TextView android:textColor="@color/black1" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/payment" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:text="@string/pay" style="@*style/TextAppearance.Medium" />
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/reset_passwd" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:text="@string/reset_passwd" style="@*style/TextAppearance.Medium" />
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" android:layout_marginTop="@dimen/cell_gap" />
            <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/itservice" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:text="@string/its" style="@*style/TextAppearance.Medium" />
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/portal" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:text="@string/portal" style="@*style/TextAppearance.Medium" />
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/aboutus" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:text="@string/aboutus" style="@*style/TextAppearance.Medium" />
            <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
