<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="@dimen/widget_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="@color/transparent_colorIPGWGray" android:layout_width="match_parent" android:layout_height="match_parent"
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007f">
            <ImageView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/widget_icon" android:paddingLeft="10dp" android:layout_width="UNKNOWN_DATA_0x7f0a0083" android:layout_height="UNKNOWN_DATA_0x7f0a0083" android:src="@drawable/appicon" />
            <TextView android:textSize="@dimen/widget_title_fontsize" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/widget_title" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007f" android:text="@string/app_fullname" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/widget_fontsize" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/widget_connect_free" android:background="@drawable/widget_rounded_corner" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0a007f" android:text="@string/today_connect_free" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/widget_fontsize" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/widget_connect_notfree" android:background="@drawable/widget_rounded_corner" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0a007f" android:text="@string/today_connect_notfree" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/widget_fontsize" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/widget_disconnect" android:background="@drawable/widget_rounded_corner" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0a007f" android:text="@string/today_disconnect" android:layout_weight="1.0" />
            <TextView android:textSize="@dimen/widget_fontsize" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/widget_disconnectall" android:background="@drawable/widget_rounded_corner" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0a007f" android:text="@string/today_disconnectall" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007f">
            <TextView android:textSize="@dimen/widget_fontsize" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/widget_info" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007f" android:text="" android:maxLines="2" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
