<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:id="@id/main_content" app:fitsSystemWindows="true" app:layout_width="match_parent" app:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout app:theme="@style/AppTheme.AppBarOverlay" app:id="@id/appbar" app:layout_width="match_parent" app:layout_height="wrap_content" />
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@id/linearlayout_resetpasswd" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <ScrollView android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content"
                <LinearLayout android:orientation="horizontal" android:padding="0dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052">
                    <EditText android:textColorHint="@color/text_hint" android:id="@id/userName_ResetPasswd" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:hint="@string/hint_username" android:layout_weight="3.0" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" style="@*style/TextAppearance.Medium" />
                    <TextView android:textColor="@color/black1" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/textviewSendCode" android:background="@color/white" android:padding="0dp" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="match_parent" android:text="@string/send_authencodes" android:layout_weight="2.0" style="@*style/TextAppearance.Medium" />
                </LinearLayout>
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <EditText android:textColorHint="@color/text_hint" android:id="@id/authenCode_ResetPasswd" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:hint="@string/hint_authencodes" android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" style="@*style/TextAppearance.Medium" />
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <EditText android:textColorHint="@color/text_hint" android:id="@id/newPasswd_ResetPasswd" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:hint="@string/hint_newpasswd" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" style="@*style/TextAppearance.Medium" />
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <EditText android:textColorHint="@color/text_hint" android:id="@id/confirmPasswd_ResetPasswd" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:hint="@string/hint_newpasswd_confirm" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" style="@*style/TextAppearance.Medium" />
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" android:layout_marginTop="@dimen/cell_gap" />
                <TextView android:textColor="@color/black1" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/textviewResetPasswd" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a0052" android:text="@string/reset_passwd" style="@*style/TextAppearance.Medium" />
                <View android:background="@color/black2" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0a007a" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
